--- a/client/src/theme/md3/ionic/segment.css
+++ b/client/src/theme/md3/ionic/segment.css
@@ -1,4 +1,4 @@
-:root[mode=md] {
+/* :root[mode=md] {
   ion-toolbar ion-segment ion-segment-button {
     margin-top: 8px;
     margin-bottom: 8px;
@@ -53,4 +53,4 @@
       height: 100%;
     }
   }
-}
+} */
